Nova navbar com animação e footer

--- a/Aula0202/gostos.html
+++ b/Aula0202/gostos.html
@@ -12,15 +12,15 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="nav-item nav-link active" href="index.html">尾花<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="gostos.html">Oque Eu Ouço</a>
-            <a class="nav-item nav-link" href="frsn.html">FRSN</a>
-            <a class="nav-item nav-link" href="discografia.html">Discografia</a>
-            <a class="nav-item nav-link" href="#">Videografia</a>
-            <a class="nav-item nav-link" href="#">Influência Musical</a>
-            <a class="nav-item nav-link" href="#">Resiliência</a>
-        </nav>
+        <div class="navbar">
+            <a class="nav-item" href="index.html">&nbsp;尾花&nbsp;</a>
+            <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
+            <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
+            <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
+        </div>
     </header>
     <main>
         <h2>
@@ -152,7 +152,7 @@
             </p>
         </div>
         <div class="pcomfoto1">
-            <img src="img/gostos/bmth.jpg" width="480" class="img-thumbnail" alt="">
+            <img src="img/gostos/bmth.jpg" width="450" class="img-thumbnail" alt="">
         </div>
         <div class="content">
             <p>
@@ -162,10 +162,27 @@
             <p>
                 O estilo de seus primeiros trabalhos, incluindo seu álbum de estreia Count Your Blessings, foi descrito principalmente como deathcore, mas eles começaram a adotar um estilo mais eclético de metalcore em álbuns posteriores. Além disso, That's the Spirit marcou uma mudança em seu som para estilos musicais de rock menos agressivos. Amo viu uma mudança em diferentes gêneros, como música eletrônica, pop e hip hop.
             </p>
+        </div>
+        <div class="videosyt">
+            <iframe style="border-radius:12px; padding-left: 10%; padding-right: 10%;" src="https://open.spotify.com/embed/track/7CAbF0By0Fpnbiu6Xn5ZF7?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <br />
+        <div class="content">
             <p>
-                Os membros fundadores do Bring Me the Horizon vieram de diversas origens musicais dentro do metal e do rock. Matt Nicholls e Oliver Sykes tinham um interesse comum no metalcore americano, bandas como Norma Jean e Skycamefalling, e costumavam assistir a shows locais de hardcore punk. Mais tarde, eles conheceram Lee Malia, que falou com eles sobre bandas de thrash metal e death metal melódico como Metallica e At the Gates; Malia também fez parte de uma banda de tributo ao Metallica antes de conhecer a dupla.  Bring Me the Horizon foi oficialmente formada em março de 2004, quando os membros tinham entre 15 e 17 anos. Curtis Ward, que também morava na área de Rotherham, se juntou a Sykes, Malia e Nicholls na bateria. O baixista Matt Kean, que estava em outras bandas locais, completou a formação. O nome da banda foi tirado da frase do filme Piratas do Caribe: A Maldição do Pérola Negra (2003) onde na versão original o capitão Jack Sparrow diz "Now, bring me that horizon.", a banda fez apenas uma ligeira alteração na frase, dando origem ao nome oficial do grupo. A banda fez seu primeiro show ao vivo em 15 de abril de 2004, no The Charter Arms em Rotherham, Inglaterra.
+                Os membros fundadores do Bring Me the Horizon vieram de diversas origens musicais dentro do metal e do rock. Matt Nicholls e Oliver Sykes tinham um interesse comum no metalcore americano, bandas como Norma Jean e Skycamefalling, e costumavam assistir a shows locais de hardcore punk. Mais tarde, eles conheceram Lee Malia, que falou com eles sobre bandas de thrash metal e death metal melódico como Metallica e At the Gates; Malia também fez parte de uma banda de tributo ao Metallica antes de conhecer a dupla.  Bring Me the Horizon foi oficialmente formada em março de 2004, quando os membros tinham entre 15 e 17 anos. Curtis Ward, que também morava na área de Rotherham, se juntou a Sykes, Malia e Nicholls na bateria. O baixista Matt Kean, que estava em outras bandas locais, completou a formação. 
+            </p>
+            <p>
+                O nome da banda foi tirado da frase do filme Piratas do Caribe: A Maldição do Pérola Negra (2003) onde na versão original o capitão Jack Sparrow diz "Now, bring me that horizon.", a banda fez apenas uma ligeira alteração na frase, dando origem ao nome oficial do grupo. A banda fez seu primeiro show ao vivo em 15 de abril de 2004, no The Charter Arms em Rotherham, Inglaterra.
             </p>
         </div>
     </main>
+    <br />
+    <footer>
+        <div class="direitos">
+            <p>
+                <i>© 2023 尾花 - All Rights Reserved</i>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
