--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -14,15 +14,15 @@
 </head>
 <body>
     <header>
-            <nav class="navbar navbar-dark bg-dark">
-            <a class="nav-item nav-link active" href="index.html">尾花<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="gostos.html">Oque Eu Ouço</a>
-            <a class="nav-item nav-link" href="frsn.html">FRSN</a>
-            <a class="nav-item nav-link" href="discografia.html">Discografia</a>
-            <a class="nav-item nav-link" href="#">Videografia</a>
-            <a class="nav-item nav-link" href="#">Influência Musical</a>
-            <a class="nav-item nav-link" href="#">Resiliência</a>
-        </nav>
+        <div class="navbar">
+            <a class="nav-item" href="index.html">&nbsp;尾花&nbsp;</a>
+            <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
+            <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
+            <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
+        </div>
     </header>
     <br />
     <main>
@@ -66,5 +66,13 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9xecxl8SnGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </main>
+    <br />
+    <footer>
+        <div class="direitos">
+            <p>
+                <i>© 2023 尾花 - All Rights Reserved</i>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
