--- a/Aula0202/discografia.html
+++ b/Aula0202/discografia.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>Discografia FRSN</title>
+    <link rel="icon" href="img/FRSN/logo.PNG">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="nav-item nav-link active" href="index.html">尾花<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="gostos.html">Oque Eu Ouço</a>
-            <a class="nav-item nav-link" href="frsn.html">FRSN</a>
-            <a class="nav-item nav-link" href="discografia.html">Discografia</a>
-            <a class="nav-item nav-link" href="#">Videografia</a>
-            <a class="nav-item nav-link" href="#">Influência Musical</a>
-            <a class="nav-item nav-link" href="#">Resiliência</a>
-        </nav>
+        <div class="navbar">
+            <a class="nav-item" href="index.html">&nbsp;尾花&nbsp;</a>
+            <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
+            <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
+            <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
+            <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
+        </div>
     </header>
     <main>
         <h2 style="padding-top: 2%; padding-bottom: 2%;">
@@ -238,5 +239,13 @@
             </tr>
         </table>
     </main>
+    <br />
+    <footer>
+        <div class="direitos">
+            <p>
+                <i>© 2023 尾花 - All Rights Reserved</i>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
