Carrossel e alterações nos textos

--- a/Aula0202/gostos.html
+++ b/Aula0202/gostos.html
@@ -31,7 +31,7 @@
         </div>
         <div class="content">
             <p>
-                Allentown, 1 de novembro de 1996 – Tucson, 15 de novembro de 2017, mais conhecido pelo nome artístico Lil Peep (as vezes estilizado como LiL PEEP), foi um músico norte-americano. Ele fez parte como um dos principais membros do grupo coletivo de emo-rap GothBoiClique, no qual fez diversos trabalhos notáveis com os rappers Lil Tracy e HorseHead. Suas canções "Save That Shit", "Awful Things", "Benz Truck", "Star Shopping", "Crybaby", "The Way I See Things", "Falling Down", "Big City Blues", "Broken Smile", entre outras, ganharam muita fama no SoundCloud e YouTube, sendo "Save That Shit" o maior sucesso do artista com mais de 450 milhões de visualizações no YouTube.
+                Allentown, 1 de novembro de 1996 - Tucson, 15 de novembro de 2017, mais conhecido pelo nome artístico Lil Peep (as vezes estilizado como LiL PEEP), foi um músico norte-americano. Ele fez parte como um dos principais membros do grupo coletivo de emo-rap GothBoiClique, no qual fez diversos trabalhos notáveis com os rappers Lil Tracy e HorseHead. Suas canções "Save That Shit", "Awful Things", "Benz Truck", "Star Shopping", "Crybaby", "The Way I See Things", "Falling Down", "Big City Blues", "Broken Smile", entre outras, ganharam muita fama no SoundCloud e YouTube, sendo "Save That Shit" o maior sucesso do artista com mais de 450 milhões de visualizações no YouTube.
             </p>
             <p>
                 Gustav Åhr nasceu em 1 de novembro de 1996, em Allentown, Pensilvânia tendo crescido em Long Island, Nova Iorque. A mãe, Liza, era professora da primeira série em Long Island e tem ascendência alemã e irlandesa, enquanto seu pai é de origem alemã e sueca. Seus pais eram graduados na Universidade Harvard. Os pais de Peep sempre serviram de exemplo para que Gustav fosse uma pessoa com futuro acadêmico brilhante, mas Gus preferiu ir para outros caminhos. Após a separação de seus pais, Lil Peep passou a ter pouco contato com seu pai. Quando criança, se destacava nos esportes, mas o que ele mais gostava era de videogames e skate. 
@@ -95,9 +95,6 @@
             <p>
                 Em 2010, a banda lançou duas faixas inéditas oficialmente em sua conta no SoundCloud. Estas faixas incluíram um spin-off original de "Time to Say Goodbye", de Andrea Bocelli e Sarah Brightman, e um cover de "Jar of Hearts", de Christina Perri. Eles estavam originalmente disponíveis para download gratuito, embora a opção tenha sido removida desde então.
             </p>
-            <p>
-                Chris Salih saiu da banda em 8 de maio de 2011, e Nick Thomas também saiu em aproximadamente um mês depois, em 3 de junho de 2011. Os dois se despediram dos fãs na página oficial da banda no Facebook. Então, Tyler Joseph se juntou a Josh Dun, ex-baterista da banda House of Heroes.
-            </p>
             <br />
             <hr />
             <h2>
@@ -115,7 +112,7 @@
                 Babymetal conseguiu sucesso mundial após o lançamento de seu álbum de estreia, autointitulado (2014), alcançando o 4° lugar na parada semanal da Oricon, com 37 463 cópias vendidas na semana de seu lançamento, além de se tornar o álbum japonês mais vendido na América do Norte em 2014, estreando no 187° lugar na parada americana Billboard 200, tornando-as as artistas japonesas mais jovens entre os que já figuraram na parada supracitada. O álbum também alcançou o 1° lugar na parada World Albums, da Billboard, além de ser certificado com ouro no Japão, pela RIAJ, por ultrapassar 100 000 cópias enviadas às lojas.
             </p>
             <p>
-                Em janeiro de 2015, o grupo lançou suas apresentações na arena Nippon Budokan em formato de DVD/BD, Live at Budokan ~Red Night & Black Night Apocalypse~, além de lançar seu primeiro álbum ao vivo, Live at Budokan ~Red Night~. A versão BD de Live at Budokan ~Red Night & Black Night Apocalypse~ estreou em 1° lugar na parada semanal da Oricon, tornando-as as artistas mais jovens, com a média de idade de 15.7 anos, a realizar tal feito. O álbum ao vivo Live at Budokan ~Red Night~ alcançou o 3° lugar na parada semanal da Oricon, sendo o primeiro álbum ao vivo a alcançar o topo da parada semanal de álbuns da Oricon em 24 anos e 7 meses, precedido por Shining Star, lançado pelo duo pop Wink em maio de 1990. Live at Budokan ~Red Night~ alcançou o 3° lugar na parada World Albums, da Billboard, enquanto seu álbum de estreia, Babymetal, continua na parada desde seu lançamento, fazendo com que dois trabalhos consecutivos do grupo figurem na parada. Também em 2015, Babymetal foi eleito pela revista Nikkei Entertainment um dos 20 grupos idol mais populares do ano no Japão, em sua lista anual, além de considerado o quarto artista japonês mais popular no Spotify, com um total de 30 100 seguidores, seguido de One Ok Rock, Joe Hisaishi e Ryuichi Sakamoto.
+                Em janeiro de 2015, o grupo lançou suas apresentações na arena Nippon Budokan em formato de DVD/BD, Live at Budokan ~Red Night & Black Night Apocalypse~, além de lançar seu primeiro álbum ao vivo, Live at Budokan ~Red Night~. A versão BD de Live at Budokan ~Red Night & Black Night Apocalypse~ estreou em 1° lugar na parada semanal da Oricon, tornando-as as artistas mais jovens, com a média de idade de 15.7 anos, a realizar tal feito. O álbum ao vivo Live at Budokan ~Red Night~ alcançou o 3° lugar na parada semanal da Oricon, sendo o primeiro álbum ao vivo a alcançar o topo da parada semanal de álbuns da Oricon em 24 anos e 7 meses, precedido por Shining Star, lançado pelo duo pop Wink em maio de 1990. Live at Budokan ~Red Night~ alcançou o 3° lugar na parada World Albums, da Billboard, enquanto seu álbum de estreia, Babymetal, continua na parada desde seu lançamento, fazendo com que dois trabalhos consecutivos do grupo figurem na parada.
             </p>
         </div>
         <br />
@@ -168,9 +165,6 @@
         </div>
         <br />
         <div class="content">
-            <p>
-                Os membros fundadores do Bring Me the Horizon vieram de diversas origens musicais dentro do metal e do rock. Matt Nicholls e Oliver Sykes tinham um interesse comum no metalcore americano, bandas como Norma Jean e Skycamefalling, e costumavam assistir a shows locais de hardcore punk. Mais tarde, eles conheceram Lee Malia, que falou com eles sobre bandas de thrash metal e death metal melódico como Metallica e At the Gates; Malia também fez parte de uma banda de tributo ao Metallica antes de conhecer a dupla.  Bring Me the Horizon foi oficialmente formada em março de 2004, quando os membros tinham entre 15 e 17 anos. Curtis Ward, que também morava na área de Rotherham, se juntou a Sykes, Malia e Nicholls na bateria. O baixista Matt Kean, que estava em outras bandas locais, completou a formação. 
-            </p>
             <p>
                 O nome da banda foi tirado da frase do filme Piratas do Caribe: A Maldição do Pérola Negra (2003) onde na versão original o capitão Jack Sparrow diz "Now, bring me that horizon.", a banda fez apenas uma ligeira alteração na frase, dando origem ao nome oficial do grupo. A banda fez seu primeiro show ao vivo em 15 de abril de 2004, no The Charter Arms em Rotherham, Inglaterra.
             </p>
