--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -26,47 +26,18 @@
     </header>
     <br />
     <main>
-        <!-- TESTES DO CARROSSEL MANUAL
-        <div class="carrossel">
-            <div class="setaesquerda" onclick="imganterior()" >
-                <img src="img/esquerda.png"width="30"/>
+        <div class="crsImg">
+            <img src="img/datacorrupted.jpg" width="" id="imgopc" />
+        </div>
+        <div class="crsControles">
+            <div class="setaesquerda">
+                <img src="img/esquerda.png" onclick="imganterior()"" width="30"/>
             </div>
             <div class="setadireita">
                 <img src="img/direita.png" onclick="proximg()" width="30"/>
             </div>
-
-            <div>
-                <img src="" id="imgopc" />
-            </div>
-        </div>-->
-
-        <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">quatro coisa que eu gosto mt, violao, praia, bike e carro, mt bacaninha👍🏻</p>
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/violao.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
-            <img src="img/bike.jpeg" class="img-thumbnail" alt="..." width="350" height="200" />
-            <img src="img/carro.jfif" class="img-thumbnail" alt="..." width="350" height="200" />
-        </div>
-        
-        <!--<img src="https://64.media.tumblr.com/f7be9445cafb84dff3dbd1c85a5e8ec6/tumblr_otqp3gNfhC1t51kf8o1_500.gifv" class="img-thumbnail" alt="..." width="350" height="200" />-->
-
-        <br />
-        <hr />
-        <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">otras duas coisa que eu gosto pacas, mamae e papai</p>
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/mae.jpg" class="img-thumbnail" alt="..." width="500" height="200" />
-        </div>
-        <div style="align-items: center; justify-content: center; display: flex; flex-direction: row;">
-            <img src="img/pai.jfif" class="img-thumbnail" alt="..." width="300" height="200" />
-        </div>
-        <br />
-        <hr />
-        <p style="align-items: center; justify-content: center; display: flex; flex-direction: row;">eu jogo de tk pq eh legal (edita video tbm eh maneiro) | so mt bom em joguinho de ritmo, pago cinquentao no pix pra jogar um x1 com qqr um</p>
-        <div class="videosyt">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/OLmKEYb0j8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/9xecxl8SnGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </main>
-    <br />
     <footer>
         <div class="direitos">
             <p>
