Imagens com tamanho padrão no carrossel

--- a/Aula0202/gostos.html
+++ b/Aula0202/gostos.html
@@ -14,7 +14,7 @@
     <header>
         <div class="navbar">
             <a class="nav-item" href="index.html">&nbsp;尾花&nbsp;</a>
-            <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
+            <a class="nav-item" id="active" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
             <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
             <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
