--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="navbar">
-            <a class="nav-item" href="index.html">&nbsp;尾花&nbsp;</a>
+            <a class="nav-item" id="active" href="index.html">&nbsp;尾花&nbsp;</a>
             <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
             <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
             <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
@@ -27,8 +27,16 @@
     <br />
     <main>
         <div class="crsImg">
-            <img src="img/datacorrupted.jpg" width="" id="imgopc" />
+            <p>
+                <i>
+                    "O que somos? se não somos o que fizemos e o que nos fez?"
+                </i>
+            </p>
         </div>
+        <div class="crsImg">
+            <img src="img/datacorrupted.jpg" class="img-thumbnail" id="imgopc" />
+        </div>
+        <br />
         <div class="crsControles">
             <div class="setaesquerda">
                 <img src="img/esquerda.png" onclick="imganterior()"" width="30"/>
