--- a/Aula0202/discografia.html
+++ b/Aula0202/discografia.html
@@ -16,7 +16,7 @@
             <a class="nav-item" href="index.html">&nbsp;尾花&nbsp;</a>
             <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
             <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
-            <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
+            <a class="nav-item" id="active" href="discografia.html">&nbsp;Discografia&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
@@ -27,7 +27,7 @@
             Discografia
         </h2>
         <table class="tabelaDisco">
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/1.jpg" alt="primeiro álbum" widtd="90" height="90" />
@@ -41,7 +41,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/2.jpg" alt="segundo álbum" widtd="90" height="90" />
@@ -55,7 +55,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/3.jpg" alt="terceiro álbum" widtd="90" height="90" />
@@ -69,7 +69,7 @@
                 </td>
             </tr>
             
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/4.jpg" alt="quarto álbum" widtd="90" height="90" />
@@ -83,7 +83,7 @@
                 </td>
             </tr> 
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/5.jpg" alt="quinto álbum" widtd="90" height="90" />
@@ -97,7 +97,7 @@
                 </td>
             </tr> 
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/DVD.jpg" alt="ptimeiro dvd" widtd="90" height="90" />
@@ -111,7 +111,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/6.jpg" alt="sexto álbum" widtd="90" height="90" />
@@ -125,7 +125,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/ep1.jpg" alt="primeiro ep" widtd="90" height="90" />
@@ -139,7 +139,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/7.jpg" alt="sétimo álbum" widtd="90" height="90" />
@@ -153,7 +153,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/ep2.jpg" alt="sétimo álbum" widtd="90" height="90" />
@@ -167,7 +167,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/8.jpg" alt="oitavo álbum" widtd="90" height="90" />
@@ -181,7 +181,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/8.2.jpg" alt="oitavo álbum deluxe" widtd="90" height="90" />
@@ -195,7 +195,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/9.jpg" alt="nono álbum" widtd="90" height="90" />
@@ -209,7 +209,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/ep3.jpg" alt="nono álbum" widtd="90" height="90" />
@@ -224,7 +224,7 @@
             </tr>
 
 
-            <tr>
+            <tr class="img-thumbnail">
                 <td>
                     <div class="media">
                         <img class="mr-3" src="img/FRSN/10.jpg" alt="décimo álbum" widtd="90" height="90" />
