Lógica de sequência pronta

--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -29,7 +29,7 @@
         <div class="crsImg">
             <p>
                 <i>
-                    "O que somos? se não somos o que fizemos e o que nos fez?"
+                    "O que somos? Se não somos o que fizemos e o que nos fez?"
                 </i>
             </p>
         </div>
@@ -38,13 +38,30 @@
         </div>
         <br />
         <div class="crsControles">
-            <div class="setaesquerda">
+            <div id="setaesquerda">
                 <img src="img/esquerda.png" onclick="imganterior()"" width="30"/>
             </div>
             <div class="setadireita">
                 <img src="img/direita.png" onclick="proximg()" width="30"/>
             </div>
         </div>
+        <br />
+        <br />
+        <hr />
+        <div style="text-align: center;">
+            <p>
+                Edição de vídeo é muito banaca, joguinhos também.
+            </p>
+        </div>
+        <div class="videosyt">
+            <iframe width="680" height="385" src="https://www.youtube.com/embed/loZNJudEdNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div> 
+        <br />
+        <div class="videosyt">
+            <iframe width="580" height="305" src="https://www.youtube.com/embed/OLmKEYb0j8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <br />
+        <br />
     </main>
     <footer>
         <div class="direitos">
