--- a/Aula0202/discografia.html
+++ b/Aula0202/discografia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>Discografia FRSN</title>
     <link rel="icon" href="img/FRSN/logo.PNG">
+    <script src="js/java.js" defer></script> 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
@@ -17,7 +18,7 @@
             <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
             <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
             <a class="nav-item" id="active" href="discografia.html">&nbsp;Discografia&nbsp;</a>
-            <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
+            <a class="nav-item" href="videografia.html">&nbsp;Videografia&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
         </div>
@@ -238,6 +239,10 @@
                 </td>
             </tr>
         </table>
+        <div class="topo" onclick="topo()" alt="seta para cima, leva ao topo" title="Voltar ao topo">
+            <img src="img/setacima.png" width="60" height="50" class="setacima" />
+        </div>
+        <br />
     </main>
     <br />
     <footer>
