--- a/Aula0202/frsn.html
+++ b/Aula0202/frsn.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRSN</title>
     <link rel="icon" href="img/FRSN/logo.PNG">
+    <script src="js/java.js" defer></script> 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
@@ -17,7 +18,7 @@
             <a class="nav-item" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
             <a class="nav-item" id="active" href="frsn.html">&nbsp;FRSN&nbsp;</a>
             <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
-            <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
+            <a class="nav-item" href="videografia.html">&nbsp;Videografia&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
         </div>
@@ -148,11 +149,15 @@
             <p>
                 Sucessor do álbum Sua Alegria Foi Cancelada (2019), que foi responsável por ressignificar a Fresno e levar a banda para novos lugares, Vou Ter Que Me Virar carrega no título (e em seu conteúdo) a realidade do contexto atual da sociedade, cheio de “vou ter que…". Inevitável mergulhar nos momentos melancólicos, porém ele encontra as frestas necessárias para chegar aos fãs como o trabalho mais esperançoso da discografia do grupo. “Até ficar pronto, Vou Ter Que Me Virar teve 42 versões. A que estamos lançando é a mais próxima dos nossos corações", conclui Lucas.
             </p>
-        </div>     
+        </div>
+        <div class="topo" onclick="topo()" alt="seta para cima, leva ao topo" title="Voltar ao topo">
+            <img src="img/setacima.png" width="60" height="50" class="setacima" />
+        </div>
+        <br />     
     </main>
     <br />
     <footer>
-        <div class="direitos" style="padding-bottom: 2%;">
+        <div class="direitos" style="padding-bottom: 1.5%;">
             <p>
                 <i>© 2023 尾花 - All Rights Reserved</i>
             </p>
