--- a/Aula0202/gostos.html
+++ b/Aula0202/gostos.html
@@ -7,6 +7,7 @@
     <title>O Que Eu Ouço</title>
     <link rel="icon" href="img/FRSN/logo.PNG">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script src="js/java.js" defer></script> 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
@@ -17,7 +18,7 @@
             <a class="nav-item" id="active" href="gostos.html">&nbsp;Oque Eu Ouço&nbsp;</a>
             <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
             <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
-            <a class="nav-item" href="#">&nbsp;Videografia&nbsp;</a>
+            <a class="nav-item" href="videografia.html">&nbsp;Videografia&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
             <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
         </div>
@@ -169,8 +170,11 @@
                 O nome da banda foi tirado da frase do filme Piratas do Caribe: A Maldição do Pérola Negra (2003) onde na versão original o capitão Jack Sparrow diz "Now, bring me that horizon.", a banda fez apenas uma ligeira alteração na frase, dando origem ao nome oficial do grupo. A banda fez seu primeiro show ao vivo em 15 de abril de 2004, no The Charter Arms em Rotherham, Inglaterra.
             </p>
         </div>
+        <div class="topo" onclick="topo()" alt="seta para cima, leva ao topo" title="Voltar ao topo">
+            <img src="img/setacima.png" width="60" height="50" class="setacima" />
+        </div>
+        <br />
     </main>
-    <br />
     <footer>
         <div class="direitos">
             <p>
