--- a/Aula0202/index.html
+++ b/Aula0202/index.html
@@ -20,8 +20,8 @@
             <a class="nav-item" href="frsn.html">&nbsp;FRSN&nbsp;</a>
             <a class="nav-item" href="discografia.html">&nbsp;Discografia&nbsp;</a>
             <a class="nav-item" href="videografia.html">&nbsp;Videografia&nbsp;</a>
-            <a class="nav-item" href="#">&nbsp;Influência Musical&nbsp;</a>
-            <a class="nav-item" href="#">&nbsp;Resiliência&nbsp;</a>
+            <a class="nav-item" href="influencia.html">&nbsp;Influência Musical&nbsp;</a>
+            <a class="nav-item" href="resi.html">&nbsp;Resiliência&nbsp;</a>
         </div>
     </header>
     <br />
