--- a/ListaExec1/index.html
+++ b/ListaExec1/index.html
@@ -18,5 +18,9 @@
     <a href="eCinco.php">5 - Do 1 ao 50 só ímpares</a>
     <br />
     <a href="eSeis.html">6 - Intervalo entre os números</a>
+    <br />
+    <a href="eSete.php">7 - 100x PHP</a>
+    <br />
+    <a href="eOito.html">8 - Sorteio entre 1 e 50</a>
 </body>
 </html>
