--- a/ListaExec1/index.html
+++ b/ListaExec1/index.html
@@ -22,5 +22,15 @@
     <a href="eSete.php">7 - 100x PHP</a>
     <br />
     <a href="eOito.html">8 - Sorteio entre 1 e 50</a>
+    <br />
+    <a href="eNove.html">9 - Positivo, negativo ou zero</a>
+    <br />
+    <a href="eDez.html">10 - Ímpar, par ou neutro</a>
+    <br />
+    <a href="eOnze.html">11 - Maior, menor ou igual</a>
+    <br />
+    <a href="eDoze.html">12 - Triângulos</a>
+    <br />
+    <a href="eTreze.html">13 - Jo Ken Po</a>
 </body>
 </html>
